# mivm

./: LICENSE  Makefile  common.mk  opcodes.csv
ir/: LICENSE  Main.hs  Makefile  example.mivms  mivm-ir.cabal  test1.mivms
tests/: Makefile  basic_opcodes.cpp  link_test.cpp
vm/: Makefile  main.cpp  mivm.cpp  mivm.hpp
