name:                mivm-ir
version:             0.1.0.0
synopsis:            MiVM IR to bytecode translator
homepage:            https://github.com/mmartin/mivm
license:             BSD3
license-file:        LICENSE
author:              Mārtiņš Mačs
maintainer:          macs.martins@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable mivm-ir
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , containers   >= 0.5
                     , parsec       >= 3
  default-language:    Haskell2010
